fixed spacing

--- a/css/style.css
+++ b/css/style.css
@@ -620,15 +620,27 @@ img{
 
 
   /* Media Query */
-  @media(max-width:560px){
+  /* Mobile */
+  @media(max-width:600px){
       .hero .main-heading h1{
         font-size:1rem;
       }
     .hero .main-heading p{
    
     }
-    .header .video-container, .common-section, .mobile-friendly .flex-container,.pricing, .faq, .community, .footer{
+    .common-section, .mobile-friendly .flex-container,.pricing, .faq, .community, .footer{
         margin:20px 0;
+    }
+    .navbar .navbar-flex{
+        flex-direction: column;
+        gap:15px;
+    }
+    .header .banner{
+        display: none;
+    }
+    .banner-content h3{
+        font-size:1rem;
+        text-align: center;
     }
     .secondary-heading{
         line-height: 1.3;
@@ -653,11 +665,33 @@ img{
     .pricing .price-details .offer-price, .pricing .premium-details{
         width:100%;
     }
-    .countdown-container .box{
-        padding:10px 15px;
+    .pricing .premium-details .cta-lifetime .btn{
+        font-size: 15px;
+        font-weight: 600;
     }
+    .countdown-container .time-box{
+        padding:10px 12px;
+    }
+    .countdown-container .time-box h1{
+        font-size:1.5rem;
+    }
+    .countdown-container .time-box span{
+        font-size:0.85rem;
+        margin-top: 4px;
+    }
+    
     .community .secondary-heading{
         line-height: 1.2;
+    }
+    .community .flex-community{
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        gap:1rem;
+    }
+    .community .join-cta{
+        padding-top:10px;
     }
     .community .join-cta a{
         padding: 12px 30px 12px 30px;
@@ -669,14 +703,15 @@ img{
   /* Tablet */
   @media(max-width:768px){
     .secondary-heading{
-        font-size:40px;
+        font-size:30px;
     }
      .hero .main-heading h1{
-        font-size:3.5rem;
+        font-size:3rem;
         line-height: 1.2;
      }
      .hero .main-heading p{
-        font-size:1.5rem;
+        font-size:1.4rem;
+        line-height: 1.3;
      }
      .hero .primary-cta{
         margin-top:20px;
